k8s/00-namespace-configmap-secret.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loan-system
